Bug 98405 - Page/paragraph background/fill color - unable to set default color "Tango: Sky Blue1"
Summary: Page/paragraph background/fill color - unable to set default color "Tango: Sk...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords: bibisected, bisected, regression
: 98645 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-04 09:29 UTC by Thibaud
Modified: 2016-09-15 22:52 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thibaud 2016-03-04 09:29:13 UTC
The background color of the page doesn't change. Even if I open a new document just to set it on white or black.
Comment 1 raal 2016-03-04 19:26:16 UTC
I can confirm with Version: 5.2.0.0.alpha0+
Build ID: aaca25d67eb5ea252730cdcf555ecc04ce04a5e6
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-02-24_23:58:47

regression (5.0.5)
Comment 2 raal 2016-03-08 11:46:36 UTC

Steps
Writer ->right click -> Page
Area -> Fill -> Color
Tango: Sky Blue1 is default, selected
press OK

Actual result: nothing change

When I select another color, then change of backgound color works. For example black color.

Thibaud, please describe your steps how to reproduce the bug. Are the same?
Comment 3 Thibaud 2016-03-08 13:33:16 UTC
Hi,

(First time reporting bug, sorry)
Version: 5.1.1.2
Build ID: 1:5.1.1~rc2-0ubuntu1
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
Locale: fr-FR (fr_FR.UTF-8)
Ubuntu GNOME 16.04 Beta

I actually did your way Raal, and the document's area turns into the color I need, but only the middle area, not the borders.

My way
On new document:
Right click - Page - Border - Line: Color

I made a mistake.. I didn't went to "Area" on page Style. I'm sorry. But it still remains the problem of the borders now.

Thank you, 

Thibaud

P.S: Should I turn the status into resolved?
Comment 4 raal 2016-03-08 13:40:11 UTC
(In reply to Thibaud from comment #3)
> Hi,
> 
> (First time reporting bug, sorry)
> Version: 5.1.1.2
> Build ID: 1:5.1.1~rc2-0ubuntu1
> CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
> Locale: fr-FR (fr_FR.UTF-8)
> Ubuntu GNOME 16.04 Beta
> 
> I actually did your way Raal, and the document's area turns into the color I
> need, but only the middle area, not the borders.
> 

Maybe try to set margins to 0.

> 
> P.S: Should I turn the status into resolved?

No, I see the bug with default color "Tango: Sky Blue1"
Comment 5 raal 2016-03-16 17:11:04 UTC
*** Bug 98645 has been marked as a duplicate of this bug. ***
Comment 6 raal 2016-03-16 17:33:47 UTC
This begun with changing of fill color dialog. Caolán, Armin can it be one of these commits? Thanks



There are only 'skip'ped commits left to test.
The first bad commit could be any of: e642812606be49244f2f775e90169fbd1be29a97 d3a0e6c621ceb08e11867a2e17f155ae1977cee2
We cannot bisect more!

git log e642812606be49244f2f775e90169fbd1be29a97
commit e642812606be49244f2f775e90169fbd1be29a97
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Sat Mar 14 22:28:59 2015 +0800

    source-hash-7d9bb549d498d6beed2c4050c402d09643febdfa
    
    commit 7d9bb549d498d6beed2c4050c402d09643febdfa
    Author:     Armin Le Grand <alg@apache.org>
    AuthorDate: Mon Jun 2 15:00:50 2014 +0000
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Tue Jul 1 13:30:09 2014 +0200
    
        Related: #i124638# Second step of DrawingLayer FillAttributes...
    
        for Writer objects, now added support for Paragraph and PageStyle (including
        Header and Footer) for direct attributes and style attributes
    
        (cherry picked from commit cc25c58f7052827bfebdc9fbeec668c8fa29ed1b)
    
        Conflicts:
                cui/source/factory/dlgfact.cxx
                cui/source/factory/dlgfact.hxx
:

git log d3a0e6c621ceb08e11867a2e17f155ae1977cee2
commit d3a0e6c621ceb08e11867a2e17f155ae1977cee2
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Sat Mar 14 22:29:03 2015 +0800

    source-hash-c7853b5b5cb71899b6b60fd2175763785b8afb7f
    
    commit c7853b5b5cb71899b6b60fd2175763785b8afb7f
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Fri Jun 20 12:42:59 2014 +0100
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Tue Jul 1 13:30:09 2014 +0200
    
        hook up new drawing support to .uis
    
        Change-Id: Id441a91e86b89bf8fe6bfd778ca09e732e054103
Comment 7 Armin Le Grand (allotropia) 2016-03-17 13:37:19 UTC
Since PageBackground works, I can exclude 7d9bb549d498d6beed2c4050c402d09643febdfa.
Nonetheless, all attributes for PageBorder are not set (get lost), after re-opening dialog all values are gone. This usually means that in-between somewhere the SfxItems are lost at setting these values (do not make it to the Writer Page Model data). HTH!
Comment 8 Commit Notification 2016-03-21 08:31:55 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4bf2b6b2e6641c82e2b714e394482f1a1620b436

tdf#98405: apply color value when switching from 'none' to 'color'

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2016-09-15 21:11:58 UTC
Hi,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Regards
Comment 10 Ivo Smelhaus 2016-09-15 22:52:30 UTC
For me, it works fine now in 5.2.1.2
Thanks Ivo