tdf#98405: apply color value when switching from 'none' to 'color'

Change-Id: I8e04160774dd7555cc872f1df65b310c8b8f8485